seo and meta des

--- a/coaches/lol.html
+++ b/coaches/lol.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduflare - League of Legends Coaches</title>
-    <meta name="description" content="Find expert League of Legends coaches at Eduflare to master MOBA gameplay.">
-    <meta name="keywords" content="league of legends coaching, gaming coaching, esports training, lol coach">
-    <link rel="canonical" href="https://eduflare.org/lol.html">
+    <title>League of Legends Coaching | Pro LoL Coaches at Eduflare</title>
+    <meta name="description" content="Accelerate your League of Legends progress with expert coaching at Eduflare. Get personalized tips on laning, macro play, champion mastery, and ranked climbing from top-tier LoL coaches. Perfect for all skill levels.">
+    <meta name="keywords" content="league of legends coaching, lol coaching, lol coach, moba coaching, eduflare lol, gaming coaching, esports training, ranked help, pro lol guide, league coaching">
+    <link rel="canonical" href="https://eduflare.org/lol/">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -26,6 +26,7 @@
         }
     </script>
 </head>
+
 <body class="bg-dark-light text-white">
     <!-- Cookie Consent Banner -->
     <div
