--- a/coaches/valorant.html
+++ b/coaches/valorant.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eduflare - Valorant Coaches</title>
-    <meta
-      name="description"
-      content="Find expert Valorant coaches at Eduflare to master tactical FPS gameplay."
-    />
-    <meta
-      name="keywords"
-      content="valorant coaching, gaming coaching, esports training, valorant coach"
-    />
-    <link rel="canonical" href="https://eduflare.org/valorant.html" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              primary: "#6366f1",
-              secondary: "#8b5cf6",
-              accent: "#f59e0b",
-              dark: "#0f172a",
-              "dark-light": "#1e293b",
-            },
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Valorant Coaching | Expert FPS Coaches at Eduflare</title>
+  <meta name="description" content="Get coached by top-tier Valorant pros at Eduflare. Improve aim, game sense, and ranked performance with personalized tactical FPS coaching for all skill levels." />
+  <meta name="keywords" content="valorant coaching, valorant coach, fps coaching, esports training, tactical fps guide, eduflare valorant, radiant coach, aim improvement valorant" />
+  <link rel="canonical" href="https://eduflare.org/valorant/" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: "#6366f1",
+            secondary: "#8b5cf6",
+            accent: "#f59e0b",
+            dark: "#0f172a",
+            "dark-light": "#1e293b",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
   <body class="bg-dark-light text-white">
     <!-- Cookie Consent Banner -->
     <div
