--- a/privacy/index.html
+++ b/privacy/index.html
@@ -175,7 +175,7 @@
     <section class="py-20">
         <div class="container mx-auto px-4 max-w-4xl">
             <div class="text-center mb-12">
-                <h1 class="text-4xl md:text-5xl font-bold mb-4">Privacy Policy</h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-4">Privacy <span class="text-primary">Policy</span></h1>
                 <p class="text-gray-400">Last updated: January 2025</p>
             </div>
 
